<resources>
    <string name="app_name">Demo</string>
    <string name="view_flipper">viewFlipper</string>
    <string name="getViewType">getViewType</string>
    <string name="hot_news">热议</string>
    <string name="hot_content">小米6来了：晓龙835+8G运存！</string>
    <string name="TODO">TODO</string>
    <string name="galary">Galary</string>
    <string name="todo">TODO</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="remove_add">remove_add</string>
    <string name="chat">chat</string>
    <string name="subscribet">subscribet</string>
    <string name="notification">notification</string>
    <string name="small_video">small_video</string>
    <string name="http">http</string>
    <string name="view">view擦除</string>
    <string name="get">Get</string>
    <string name="post">Post</string>
</resources>
